# Worker

./: Dockerfile  docker-compose.yml
src/: CMakeLists.txt  app.hpp  cipher.hpp  main.cpp  queue.hpp  state.cpp  state.hpp
src/entities/: consumer.cpp  consumer.hpp  user.hpp
src/network/: fail.hpp  handle_request.hpp  http_session.hpp  listener.hpp  mime_type.hpp  path_cat.hpp  protocol.cpp  protocol.hpp  session.cpp  session.hpp  websocket_session.cpp  websocket_session.hpp
